# img2art

./: .gitignore  README.md  pyproject.toml  test.py
img2art/: __init__.py  cli.py  utils.py
